--- a/public/css/Component/Customer/Customer_Request_Main.css
+++ b/public/css/Component/Customer/Customer_Request_Main.css
@@ -299,6 +299,7 @@
         transition: transform 0.4s ease-in, background-color 0.4s ease-in;
         box-shadow: var(--box-shadow);
         border-radius: 10px;
+        background-color: #333;
     }
 
     .overlay {
