--- a/public/css/Component/CenterManager/CenterManager_CenterWorker.css
+++ b/public/css/Component/CenterManager/CenterManager_CenterWorker.css
@@ -7,6 +7,14 @@
 
     }
 
+    #dashboard i {
+        color: var(--green-color-one);
+    }
+
+    #dashboard h3 {
+        color: var(--green-color-one);
+    }
+
     .main-right-bottom-top {
         width: 99%;
         padding-left: 1%;
@@ -94,7 +102,7 @@
 
     }
 
-    .main {
+    .main-right {
         width: 100%;
         height: 727px;
         display: grid;
