--- a/public/css/Component/CenterManager/CenterManager_Collector.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector.css
@@ -5,13 +5,22 @@
         font-family: inter;
     }
 
+    
+    #dashboard i {
+        color: var(--green-color-one);
+    }
+
+    #dashboard h3 {
+        color: var(--green-color-one);
+    }
+
     a {
         text-decoration: none;
         font-family: inter;
         color: inherit;
     }
 
-    .main {
+    .main-right {
         width: 100%;
         height: 727px;
         display: grid;
