--- a/public/css/Component/CenterManager/CenterManager_Collector_Add.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector_Add.css
@@ -7,17 +7,26 @@
         font-family: inter;
     }
 
+    #dashboard i {
+        color: var(--green-color-one);
+    }
+
+    #dashboard h3 {
+        color: var(--green-color-one);
+    }
+
     a {
         text-decoration: none;
         font-family: inter;
         color: inherit;
     }
 
-    .main {
+    .main-right {
         width: 100%;
         height: 727px;
         display: grid;
         grid-template-rows: 8% 92%;
+        overflow: scroll;
     }
 
     .main-top {
@@ -26,6 +35,7 @@
         justify-content: space-between;
         align-items: center;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+     
     }
 
     .main-top img {
