--- a/public/css/Component/CenterManager/CenterManager_Collector_Complains.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector_Complains.css
@@ -11,7 +11,15 @@
         color: inherit;
     }
 
-    .main {
+    #dashboard i {
+        color: var(--green-color-one);
+    }
+
+    #dashboard h3 {
+        color: var(--green-color-one);
+    }
+
+    .main-right {
         width: 100%;
         height: 727px;
         display: grid;
