requests UI fix

--- a/public/css/Component/CenterManager/CenterManager_EditProfile.css
+++ b/public/css/Component/CenterManager/CenterManager_EditProfile.css
@@ -13,6 +13,15 @@
         overflow: hidden;
     }
 
+    #edit_profile i {
+        color: var(--green-color-one);
+    }
+
+    #edit_profile h3 {
+        color: var(--green-color-one);
+    }
+
+
     .main-right {
         display: grid;
         grid-template-rows: 9% 91%;
