--- a/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
@@ -10,6 +10,14 @@
 
     }
 
+    #request i {
+        color: var(--green-color-one);
+    }
+
+    #request h3 {
+        color: var(--green-color-one);
+    }
+
     .main-right-bottom {
         flex-direction: column;
         height: 550px;
