--- a/public/css/Component/Customer/Customer_Dashboard.css
+++ b/public/css/Component/Customer/Customer_Dashboard.css
@@ -1120,20 +1120,70 @@ font-size: 13px;
         transform: translate(-50%, -50%) scale(0);
         z-index: 4;
         align-items: center;
-        justify-content: center;
         flex-direction: column;
         overflow: hidden;
         transition: transform 0.4s ease-in, background-color 0.4s ease-in;
         box-shadow: var(--box-shadow);
         border-radius: 10px;
         background-color: var(--background-color-main);
-        width: 50%;
-        height: 60%;
+        width: 47%;
+        height: 40%;
     }
 
     .eco_credit_per_quantity.active {
         transform: translate(-50%, -50%) scale(1);
     }
+
+    .eco_credit_per_quantity img {
+        width: 25px;
+        height: 25px;
+        margin-left: 95%;
+        margin-top: 1%;
+        cursor: pointer;
+    }
+
+    .eco_credit_per_quantity h1 {
+        font-size: 21px;
+        letter-spacing: 0.01rem;
+        margin-top: 10px;
+        margin-bottom: 15px;
+    }
+
+    .eco_credit_per_quantity h2 {
+        font-size: 18px;
+        margin-top: 5px;
+        font-weight: 500;
+
+    }
+
+    .Eco_Credit_Per_Cont {
+        display: flex;
+    }
+
+    .Eco_Credit_Per_Cont .Cont {
+        display: flex;
+        flex-direction: column;
+        margin: 30px;
+        align-items: center;
+    }
+
+    .Eco_Credit_Per_Cont .Cont h3 {
+        font-size: 15px;
+        margin-bottom: 10px;
+        font-weight: 500;
+    }
+
+    .Eco_Credit_Per_Cont .Cont p {
+        font-size: 14px;
+    }
+
+    .Eco_Credit_Per_Cont .Cont .bx {
+        font-size: 29px;
+        margin-bottom: 10px;
+
+    }
+
+
 
     .overlay {
         position: fixed;
