--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -30,6 +30,59 @@
 
     }
 
+    .main-right-bottom-two {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main-right-bottom-two-content {
+        width: 55%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main-right-bottom-two-content i {
+        font-size: 150px;
+        margin-bottom: 1%;
+        margin-top: 45px;
+    }
+
+    .main-right-bottom-two-content h1 {
+        font-size: 21px !important;
+        color: var(--main-text-color);
+        font-weight: 550;
+        margin-top: 2%;
+        letter-spacing: 0.05rem;
+
+    }
+
+    .main-right-bottom-two-content button {
+        height: 40px;
+        width: 220px;
+        outline: none;
+        color: white;
+        font-size: 19px;
+        font-weight: 500;
+        border-radius: 5px;
+        cursor: pointer;
+        border: none;
+        letter-spacing: 1px;
+        background: var(--green-color-one);
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        margin-bottom: 20px;
+        margin-top: 10%;
+    }
+
+    .main-right-bottom-two-content p {
+        font-size: 18px;
+        margin-top: 7px;
+        color: var(--main-text-color);
+    }
+
     .main-right-top-one {
         display: flex;
         flex-direction: row;
