--- a/public/css/Component/Customer/Customer_Main_History.css
+++ b/public/css/Component/Customer/Customer_Main_History.css
@@ -130,7 +130,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        height: 100%;
+        height: 85% !important;
         font-size: 67px !important;
     }
 
@@ -143,6 +143,7 @@
     .main-right-bottom-two-content i {
         font-size: 150px;
         margin-bottom: 1%;
+        margin-top: -1%;
     }
 
     .main-right-bottom-two {
