--- a/public/css/Component/Customer/Customer_Request_Main.css
+++ b/public/css/Component/Customer/Customer_Request_Main.css
@@ -230,6 +230,56 @@
         overflow: scroll;
     }
 
+    .main-right-bottom-two {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main-right-bottom-two-content {
+        width: 55%;
+        height: 95%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main-right-bottom-two-content img {
+        width: 450px;
+        height: 450px;
+    }
+
+    .main-right-bottom-two-content h1 {
+        font-size: 23px;
+        color: var(--main-text-color);
+        font-weight: 550;
+        margin-top: 2%;
+    }
+
+    .main-right-bottom-two-content p {
+        font-size: 18px;
+        margin-top: 7px;
+        color: var(--main-text-color);
+    }
+
+    .main-right-bottom-two-content button {
+        height: 40px;
+        width: 175px;
+        outline: none;
+        color: white;
+        font-size: 19px;
+        font-weight: 500;
+        border-radius: 5px;
+        cursor: pointer;
+        border: none;
+        letter-spacing: 1px;
+        background: var(--green-color-one);
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        margin-bottom: 20px;
+        margin-top: 10%;
+    }
+
     .location_pop {
         display: flex;
         position: fixed;
