--- a/public/css/Component/Customer/Customer_Transfercredit.css
+++ b/public/css/Component/Customer/Customer_Transfercredit.css
@@ -174,209 +174,298 @@
         font-size: 14px;
     }
 
-    .main-right {
 
 
-        .main-bottom {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .main-bottom-component {
-            width: 65%;
-            height: 80%;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            display: grid;
-            grid-template-columns: 50% 50%;
-            box-sizing: border-box;
-        }
-
-
-        .main-bottom-component-right {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .main-bottom-component-right img {
-            width: 85%;
-            height: 78%;
-            box-shadow: var(--box-shadow);
-            border-radius: 10px;
-
-        }
-
-        .main-bottom-component-left {
-            display: flex;
-            flex-direction: column;
-            margin: auto;
-        }
-
-
-        .main-bottom-component-left-topic {
-            margin-bottom: 50px;
-            margin-top: -50px;
-        }
-
-        .line {
-            height: 4px;
-            width: 60px;
-            background: var(--green-color-one);
-            margin-top: 3px;
-        }
-
-        .main-bottom-component-left-topic h2 {
-            font-size: 24px;
-            font-weight: 500;
-            letter-spacing: 0.01rem;
-        }
-
-        .main-bottom-component-left-component {
-            width: 400px;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .main-bottom-component-left-component {
-            width: 350px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            margin-bottom: 10px;
-        }
-
-        .main-bottom-component-left-component p {
-            font-weight: 500;
-            margin-bottom: 5px;
-            font-size: 15px;
-            margin-bottom: 7px;
-        }
-
-        .main-bottom-component-left-component h4 {
-            font-weight: 500;
-            margin-bottom: 5px;
-            font-size: 14px;
-            margin-bottom: 7px;
-        }
-
-        .main-bottom-component-left-component input {
-            height: 28.5px;
-            width: 350px;
-            outline: none;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            transition: all 0.3s ease;
-            margin-bottom: 6px;
-            font-size: 14px;
-            letter-spacing: 0.03rem;
-            background-color: var(--background-color-two);
-            color: var(--main-text-color);
-        }
-
-        .main-bottom-component-left-component input:focus {
-            border-color: var(--green-color-one);
-            outline: none;
-        }
-
-        .complain {
-            height: 66px !important;
-        }
-
-        .err {
-            height: 10px;
-            font-size: 14px;
-            font-weight: 500;
-            margin-bottom: 5px;
-            width: 350px;
-            color: #e74c3c;
-        }
-
-        .main-bottom-component-left-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-top: 5px;
-        }
-
-        .main-bottom-component-left button {
-            width: 350px;
-            outline: none;
-            font-weight: 500;
-            border-radius: 5px;
-            cursor: pointer;
-            border: none;
-            letter-spacing: 1px;
-            margin-top: 10px;
-            height: 35px;
-            font-size: 15px;
-            color: var(--background-color-main);
-            cursor: pointer;
-            letter-spacing: 0.03rem;
-            transition: background-color 0.6s ease-in;
-            background-color: var(--green-color-two);
-            border-radius: 7px;
-        }
-
-        /*Success popup*/
-        .credit_transfer_success {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.1);
-            z-index: 2;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            height: 100%;
-        }
-
-        .popup {
-            width: 400px;
-            background: white;
-            font-family: 'poppins', sans-serif;
-            border-radius: 6px;
-            text-align: center;
-            padding: 0 30px 30px;
-            color: #333;
-            transition: transform 0.4s, top 0.4s;
-        }
-
-        .open-popup {
-            visibility: visible;
-            top: 50%;
-            transform: translate(-50%, -50%) scale(1);
-        }
-
-        .popup img {
-            width: 100px;
-            margin-top: 35px;
-            border-radius: 50%;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        .popup h2 {
-            font-size: 38px;
-            font-weight: 500;
-            margin: 10px 0 10px;
-        }
-
-        .popup button {
-            width: 100%;
-            margin-top: 30px;
-            padding: 10px 0;
-            background: var(--green-color-one);
-            color: white;
-            border: 0;
-            outline: none;
-            font-size: 18px;
-            border-radius: 6px;
-            cursor: pointer;
-            box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-        }
+    .main-bottom {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
+
+    .main-bottom-component {
+        width: 65%;
+        height: 80%;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        box-sizing: border-box;
+    }
+
+
+    .main-bottom-component-right {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main-bottom-component-right img {
+        width: 85%;
+        height: 78%;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+
+    }
+
+    .main-bottom-component-left {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+    }
+
+
+    .main-bottom-component-left-topic {
+        margin-bottom: 50px;
+        margin-top: -50px;
+    }
+
+    .line {
+        height: 4px;
+        width: 60px;
+        background: var(--green-color-one);
+        margin-top: 3px;
+    }
+
+    .main-bottom-component-left-topic h2 {
+        font-size: 24px;
+        font-weight: 500;
+        letter-spacing: 0.01rem;
+    }
+
+    .main-bottom-component-left-component {
+        width: 400px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main-bottom-component-left-component {
+        width: 350px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+
+    .main-bottom-component-left-component p {
+        font-weight: 500;
+        margin-bottom: 5px;
+        font-size: 15px;
+        margin-bottom: 7px;
+    }
+
+    .main-bottom-component-left-component h4 {
+        font-weight: 500;
+        margin-bottom: 5px;
+        font-size: 14px;
+        margin-bottom: 7px;
+    }
+
+    .main-bottom-component-left-component input {
+        height: 28.5px;
+        width: 350px;
+        outline: none;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        transition: all 0.3s ease;
+        margin-bottom: 6px;
+        font-size: 14px;
+        letter-spacing: 0.03rem;
+        background-color: var(--background-color-two);
+        color: var(--main-text-color);
+    }
+
+    .main-bottom-component-left-component input:focus {
+        border-color: var(--green-color-one);
+        outline: none;
+    }
+
+    .complain {
+        height: 66px !important;
+    }
+
+    .err {
+        height: 10px;
+        font-size: 14px;
+        font-weight: 500;
+        margin-bottom: 5px;
+        width: 350px;
+        color: #e74c3c;
+    }
+
+    .main-bottom-component-left-button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 5px;
+    }
+
+    .main-bottom-component-left button {
+        width: 350px;
+        outline: none;
+        font-weight: 500;
+        border-radius: 5px;
+        cursor: pointer;
+        border: none;
+        letter-spacing: 1px;
+        margin-top: 10px;
+        height: 35px;
+        font-size: 15px;
+        color: var(--background-color-main);
+        cursor: pointer;
+        letter-spacing: 0.03rem;
+        transition: background-color 0.6s ease-in;
+        background-color: var(--green-color-two);
+        border-radius: 7px;
+    }
+
+    /*Success popup*/
+    .credit_transfer_success {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    .popup {
+        width: 400px;
+        background: white;
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
+    }
+
+    .open-popup {
+        visibility: visible;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .popup img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup h2 {
+        font-size: 38px;
+        font-weight: 500;
+        margin: 10px 0 10px;
+    }
+
+    .popup button {
+        width: 100%;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: var(--green-color-one);
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 6px;
+        cursor: pointer;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    }
+
+
+    /*Cancel confirm popup*/
+    .delete_confirm {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+
+
+    .popup {
+        width: 400px;
+        background: white;
+        border-radius: 10px;
+        top: 0;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        box-shadow: var(--box-shadow);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+
+    }
+
+    .popup a {
+        width: auto;
+    }
+
+    .open-popup {
+        visibility: visible;
+        top: 50%;
+    }
+
+    .popup img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup h2 {
+        font-size: 23px;
+        font-weight: 600;
+        margin: 10px 0 10px;
+    }
+
+    .btns {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .deletebtn {
+        width: 150px !important;
+        margin-top: 30px;
+        margin-right: 20px;
+        padding: 10px 0;
+        background: rgb(220, 39, 39);
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .cancelbtn {
+        width: 150px !important;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: #bab3b3 !important;
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    }
+
 }
