--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,6 +76,7 @@
 @import url('Component/CenterManager/CenterManager_Request_Incomming.css');
 @import url('Component/CenterManager/CenterManager_Request_Cancelled.css');
 @import url('Component/CenterManager/CenterManager_Request_Assinged.css');
+@import url('Component/CenterManager/CenterManager_Request_Completed.css');
 
 @import url('Component/CenterManager/CenterManager_EditProfile.css');
 
