--- a/public/css/Component/CenterManager/CenterManager_Request_Completed.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Completed.css
@@ -88,28 +88,35 @@
         height: 40px;
     }
 
+    /*Location popup*/
     .location_pop {
-        display: none;
+        display: flex;
         position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 1;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: rgba(0, 0, 0, 0);
+        z-index: 4;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+    }
+
+    .location_pop.active {
+        transform: translate(-50%, -50%) scale(1);
     }
 
     .location_pop_content {
-        width: 47%;
-        height: 55%;
+        width: 700px;
         padding: 10px;
         background-color: #f1f2f6;
         border-radius: 10px;
         padding: 20px;
         padding-bottom: 40px;
+        height: 350px;
+        overflow: hidden;
     }
 
     .location_pop_map {
@@ -127,47 +134,57 @@
 
     .location_close button {
         background-color: #ff4757;
-        height: 28px;
         color: #fff;
         cursor: pointer;
         border: none;
         font-size: 16px;
         border-radius: 5px;
         width: 85px;
+        height: 28px;
     }
 
-    /*request details*/
-    .request-details-pop {
+    /* ------------*/
+    
+    /*collect details*/
+
+    .collect-details-pop {
+        display: flex;
         position: fixed;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
-        display: none;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 4;
         align-items: center;
         justify-content: center;
-        width: 100%;
-        height: 100%;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
     }
 
-    .request-details-pop-form {
-        width: 45%;
-        background: white;
-        border-radius: 6px;
+    .collect-details-pop.active {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .collect-details-pop-form {
+        box-sizing: border-box;
+        width: 100%;
+        background: var(--background-color-main);
+        border-radius: 10px !important;
         top: 0;
         position: relative;
         text-align: center;
         padding: 30px;
-        color: #333;
         display: flex;
         align-items: center;
         justify-content: center;
         transition: transform 0.4s, top 0.4s;
         flex-direction: column;
-
+        color: var(--main-text-color);
     }
 
-    .request-details-pop-form-top {
+    .collect-details-pop-form-top {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -175,38 +192,167 @@
         font-size: 18px;
     }
 
-    .request-details-pop-form-close {
+    .collect-details-topic::before {
+        content: '';
+        position: absolute;
+        margin-top: 28px;
+        margin-left: 40px;
+        margin-bottom: 15px;
+        height: 4px;
+        width: 75px;
+        background: var(--green-color-two);
+    }
+
+    .collect-details-pop-form-close {
         width: 25px;
         height: 25px;
-        margin-left: 100%;
+        margin-left: 600px;
         margin-top: -3%;
         cursor: pointer;
     }
 
-    .request-details-topic {
-        display: flex;
-    }
-
-    .request-details-pop-form-content {
+    .collect-details-pop-form-content {
         display: grid;
-        grid-template-columns: 30% 70%;
+        grid-template-columns: 50% 50%;
         width: 80%;
-        background-color: white;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        border-radius: 6px;
-
+        background: var(--background-color-main);
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        padding: 10px;
+        height: 300px;
     }
 
-    .request-details-topic::before {
+    .collect-details-pop-form-content span {
+        width: 250px;
+    }
+
+    .collect-details-pop-form-content-labels {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .collect-details-pop-form-content-labels h3 {
+        font-weight: 300;
+        font-size: 14px;
+        margin-bottom: 5%;
+        width: 300px;
+        text-align: left;
+        margin-left: 45%;
+    }
+
+    .collect-details-pop-form-content-right-values {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .collect-details-pop-form-content-right-values-cont h3 {
+        width: 45px;
+    }
+
+    .collect-details-pop-form-content-right-values-cont {
+        display: flex;
+        margin-bottom: 4%;
+    }
+
+    .collect-details-pop-form-content-right-values h3 {
+        font-weight: 300;
+        font-size: 14px;
+    }
+
+    /*Collector info*/
+    .personal-details-popup-box {
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 4;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        background-color: #333;
+    }
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: none;
+    }
+
+    .personal-details-popup-box.active {
+        transform: translate(-50%, -50%) scale(1);
+        background-color: rgba(0, 0, 0, 0);
+    }
+
+    .personal-details-popup-form {
+        box-sizing: border-box;
+        width: 700px;
+        background: var(--background-color-main);
+        border-radius: 6px;
+        top: 0;
+        position: relative;
+        text-align: center;
+        padding: 0 30px 30px 30px;
+        color: #333;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        box-shadow: var(--box-shadow);
+        color: var(--main-text-color);
+    }
+
+    .personal-details-topic {
+        letter-spacing: 0.03rem;
+    }
+
+    .personal-details-topic::before {
         content: '';
         position: absolute;
-        margin-top: 23px;
-        margin-left: 45px;
-        margin-bottom: 15px;
-        height: 4px;
-        width: 67px;
+        margin-top: 25px;
+        margin-bottom: 25px;
+        height: 3px;
+        width: 70px;
+        margin-left: 25%;
         background: #1B6652;
+    }
 
+    .personal-details-popup-form-close {
+      
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px;
+        cursor: pointer;
+    }
+
+    .personal-details-popup {
+        display: grid;
+        grid-template-columns: 40% 60%;
+        width: 100%;
+        border-radius: 4px;
+        height: 100%;
+        padding-top: 10px;
+        margin-top: 17px;
+        box-shadow: var(--box-shadow);
+    }
+
+    .personal-details-right {
+        display: grid;
+        grid-template-columns: 35% 65%;
     }
 
     .personal-details-right-labels {
@@ -242,7 +388,165 @@
         font-weight: 550;
     }
 
-    /* ------------*/
+    .personal-details-left {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        flex-direction: column;
+    }
+
+    .personal-details-left img {
+        width: 150px;
+        height: 150px;
+    }
+
+    .personal-details-left p {
+        margin-top: 5px;
+        font-size: 15px;
+        color: #7c7c7d;
+    }
+
+    .personal-details-left span {
+        color: #767e95;
+        font-weight: 550;
+    }
+
+    .profile-pic {
+        width: 70%;
+        height: auto;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-bottom: 8px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    }
+
+    .personal-details-topic {
+        font-size: 18px;
+        font-weight: 500;
+        position: relative;
+        margin-inline-end: auto;
+        margin-top: 15px;
+    }
+
+    .confirmed_button{
+        padding: 7px;
+        background-color: var(--green-color-one);
+        color: white;
+        border-radius: 5px;
+        box-shadow: var(--box-shadow);
+        outline: none;
+        border: none;
+        cursor: pointer;
+
+    }
+
+    .confirmed_button:hover{
+        background-color: #19954e;
+    }
+
+
+    @media screen and (max-width: 1250px) {
+        .main-left-middle-content h2 {
+            display: none;
+        }
+
+        .main-left-middle-content-line {
+            display: none;
+        }
+
+        .main-left-middle-content img {
+            margin-left: 0;
+        }
+
+        .main-left-bottom-content p {
+            display: none;
+        }
+
+        .main-left-bottom-content {
+            padding-right: 0px;
+        }
+
+        .main-left-top h1 {
+            display: none;
+        }
+
+        .main-left-top img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    @media screen and (max-width: 1118px) {
+        .main-right-top-one-content {
+            width: 250px;
+            margin-left: 1%;
+        }
+
+        .table td {
+            font-size: 12px;
+        }
+
+        .table-header {
+            font-size: 14px;
+        }
+
+        .table-row img {
+            width: 20px;
+            height: 20px
+        }
+
+    }
+
+    @media screen and (max-width:862px) {
+        .main-right-top-one-content {
+            width: 250px;
+            margin-left: 0;
+            padding-left: 5%;
+        }
+
+        .main-right-top-one input {
+            width: 20%;
+        }
+
+        .main-right-top-three-content p {
+            font-size: 14px;
+        }
+
+        .line {
+            width: 86px;
+            height: 2px;
+        }
+
+        .table td {
+            font-size: 10px;
+        }
+
+        .table-header {
+            font-size: 12px;
+        }
+
+        .table-row img {
+            width: 17px;
+            height: 17px;
+        }
+    }
+
+    @media screen and (max-width: 692px) {
+        .table td {
+            font-size: 9px;
+        }
+
+        .table-header {
+            font-size: 10px;
+        }
+
+        .table-row img {
+            width: 15px;
+            height: 15px;
+        }
+    }
+
 
 
 }
