--- a/public/css/Component/Customer/Customer_Request_Main.css
+++ b/public/css/Component/Customer/Customer_Request_Main.css
@@ -435,6 +435,7 @@
         padding-top: 40px;
         padding-bottom: 50px;
         padding-left: 25px;
+        width: 200%;
     }
 
     .personal-details-right-labels span {
