--- a/public/css/Component/Collector/Collector_Request_Cancelled.css
+++ b/public/css/Component/Collector/Collector_Request_Cancelled.css
@@ -11,25 +11,16 @@
     }
 
     .table-row {
-        font-size: 1px;
-        font-family: Montserrat;
-        text-align: left;
-        height: 52px;
-        display: grid;
-        border-bottom: 2px solid #CACACA;
+        height: 55px;
         grid-template-columns: 11% 10% 10% 15% 11% 13% 40%;
     }
 
     .table td {
-        height: 50px;
-        font-size: 15.5px;
+        height: 55px;
     }
 
     .table-header {
-        background-color: #ecf0f1;
-        font-family: Montserrat;
-        height: 55px;
-        grid-template-columns: 11% 10% 10% 15% 11% 13% 40%;
+        grid-template-columns: 11% 10% 9% 13% 10% 12% 17% 9% 9%;
     }
 
     td img {
