--- a/public/css/Component/Collector/Collector_Request_Top.css
+++ b/public/css/Component/Collector/Collector_Request_Top.css
@@ -4,7 +4,8 @@
         display: grid;
         width: 100%;
         height: 100%;
-        grid-template-rows: 26% 74%;
+        grid-template-rows: 28% 72%;
+        background-color: var(--background-color-right);
     }
 
     .main-right-top {
@@ -16,83 +17,176 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-between;
-        height: 55px;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        justify-content: space-around;
+        border: 10px;
+        width: 100%;
+        box-sizing: border-box;
+        height: 37%;
+        box-shadow: var(--box-shadow2);
+        background-color: var(--background-color-main);
+        z-index: 1;
     }
 
-    .main-right-top-one-search {
+    .main-right-top-search {
         display: flex;
-        flex-direction: row;
-    }
-
-    .main-right-top-one img {
-        margin-left: 30px;
-        margin-right: 14px;
-        width: 22px;
-        height: 22px;
-    }
-
-    .main-right-top-one input {
-        width: 375px;
-        height: 24px;
-        border-radius: 3px;
-        border: 1px solid #7f8c8d;
-        padding-left: 10px;
-    }
-
-    .main-right-top-one-content {
-        display: flex;
-        flex-direction: row;
         align-items: center;
+        justify-content: center;
+        width: 35%;
+        position: relative;
     }
 
-    .main-right-top-one-content p {
-        font-family: inter;
-        font-size: 17px;
+    .main-right-top-search i {
+        position: absolute;
+        font-size: 25px;
+        left: 10px;
+        top: 50%;
+        transform: translateY(-50%);
     }
 
+    .main-right-top-search input {
+        width: 100%;
+        height: 33px;
+        border-radius: 7px;
+        background-color: var(--background-color-two);
+        border: 1px solid #dcdde1;
+        font-size: 14px;
+        padding-left: 40px;
+        letter-spacing: 0.03rem;
+        color: var(--main-text-color);
+    }
 
-    .main-right-top-one-content img {
-        width: 44px;
-        height: 44px;
-        margin-left: 15px;
+    .main-right-top-search input:focus {
+        border: 1px solid #1ca557;
+        outline: none;
+    }
+
+    .main-right-top-notification {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 35%;
+        margin-right: 2.5%;
+    }
+
+    .dot {
+        width: 11px;
+        height: 11px;
         border-radius: 50%;
+        background-color: #F13E3E;
+        margin-top: -14px;
+        margin-left: -12px;
     }
 
-    .main-right-top-two {
-        height: 50px;
-        display: flex;
-        align-items: center;
-
-    }
-
-    .main-right-top-two button {
-        width: 206px;
-        height: 43px;
-        background: #8CF889;
-        font-size: 20px;
-        font-weight: 700;
-        line-height: 24px;
-        letter-spacing: 0em;
-        text-align: center;
-        border-radius: 5px;
-        border: none;
-        margin-right: 5%;
+    .main-right-top-notification i {
+        font-size: 29px;
         cursor: pointer;
     }
 
+    .notification_popup {
+        height: 0;
+        position: absolute;
+        top: 9%;
+        right: 11%;
+        background-color: var(--background-color-main);
+        border-radius: 10px;
+        padding: 0;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        transition: height 0.6s ease-in;
+        width: 18%;
+        visibility: hidden;
+        opacity: 0;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: scroll;
+        border: 1px solid #dcdde1;
+    }
+
+    .notification_popup h1 {
+        font-size: 19px;
+        letter-spacing: 0.001rem;
+        margin-bottom: 13px;
+        margin-top: 5px;
+        margin-left: 8px;
+    }
+
+    .notification_popup.active {
+        height: 200px;
+        padding: 10px;
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .notification {
+        height: 43px !important;
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        padding-left: 10px;
+        font-size: 14px;
+        cursor: pointer;
+    }
+
+    .notification:hover {
+        background-color: var(--notification-hover);
+    }
+
+    .notification-green-dot {
+        width: 11px;
+        height: 11px;
+        border-radius: 50%;
+        background-color: var(--green-color-one);
+        margin-right: 10px;
+    }
+
+    .main-right-top-profile {
+        display: flex;
+        margin-right: 40px;
+    }
+
+    .main-right-top-profile img {
+        width: 50px;
+        height: 50px;
+        margin-right: 15px;
+        border-radius: 10px;
+    }
+
+    .main-right-top-profile-cont {
+        margin-top: 7px;
+    }
+
+    .main-right-top-profile-cont h3 {
+        font-size: 18px;
+        letter-spacing: 0.03rem;
+    }
+
+    .main-right-top-profile-cont p {
+        font-size: 14px;
+    }
+
+    .main-right-top-two {
+        height: 29%;
+        display: flex;
+        align-items: center;
+        padding-left: 33px;
+        background-color: var(--background-color-right);
+        box-sizing: border-box;
+    }
+
     .main-right-top-two h1 {
-        font-size: 22px;
-        margin-left: 28px;
+        font-size: 19px;
+        margin-left: 1%;
+        letter-spacing: 0.03rem;
+        margin-top: 1%;
     }
 
     .main-right-top-three {
         display: flex;
         flex-direction: row;
-        padding-left: 38px;
-        padding-top: 6px;
-
+        padding-left: 34px;
+        margin: 0.6%;
+        height: 13%;
+        background-color: var(--background-color-right);
     }
 
     .main-right-top-three-content {
@@ -100,19 +194,32 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-right: 30px;
+        margin-right: 15px;
         cursor: pointer;
     }
 
     .main-right-top-three-content p {
-        font-size: 17px;
+        font-size: 15px;
         padding-bottom: 5px;
+        color: var(--main-text-color);
+        letter-spacing: 0.03rem;
+    }
+
+    .line {
+        width: 93px;
+        height: 3px;
+        background-color: #1ca557;
+    }
+
+    .line1 {
+        width: 93px;
+        height: 3px;
     }
 
     .main-right-top-four {
         display: flex;
         align-items: center;
-        height: 54px;
+        height: 24%;
         padding-right: 19px;
         justify-content: space-between;
     }
@@ -122,39 +229,40 @@
         align-items: center;
         justify-content: center;
         border: 1px solid #ddd;
-        padding-left: 10px;
-        margin-left: 30px;
+        padding-left: 20px;
+        margin-left: 50px;
         border-radius: 10px;
-        height: 34px;
+        height: 25px;
     }
 
     .main-right-top-four-left input {
-        height: 70;
+        height: 25px;
         margin-left: 15px;
-        width: 150px;
+        width: 120px;
         text-align: center;
-        font-size: 15px;
+        font-size: 14px;
         display: flex;
         align-items: center;
         justify-content: center;
         border: none;
-        margin-right: 7px;
+        margin-right: 9px;
     }
 
     .main-right-top-four-left p {
-        font-size: 15px;
+        font-size: 14px;
+        letter-spacing: 0.03rem;
     }
 
     .main-right-top-four-left button {
         margin-right: 5px;
         font-weight: bold;
         background-color: #f6e58d;
-        height: 26px;
+        height: 25px;
         border-radius: 10px;
         border: none;
         width: 100px;
         cursor: pointer;
-        font-size: 15px;
+        font-size: 14px;
         transition: 1s;
         letter-spacing: 0.05rem;
     }
@@ -165,65 +273,61 @@
 
     .main-right-top-four-right {
         display: flex;
-
     }
 
     .main-right-top-four img {
-        width: 25px;
-        height: 25px;
+        width: 2-px;
+        height: 20px;
         margin-right: 4px;
     }
 
     .main-right-top-four-component {
+        font-size: 15px;
         border-radius: 8px;
         border: 1px solid #ddd;
-        padding: 10px;
+        padding: 5px;
+        box-sizing: border-box;
         margin: 5px;
         justify-content: center;
         align-items: center;
         display: flex;
         width: 80px;
-        height: 17px;
+        height: 36px;
         cursor: pointer;
     }
 
-    .line {
-        width: 93px;
-        height: 3px;
-        background-color: #1B6652;
-    }
-
-    .line1 {
-        width: 93px;
-        height: 3px;
-        background-color: none;
-    }
-
-    .main-right-bottom-top {
-        padding-left: 1%;
-        width: 99%;
+    .main-right-bottom {
+        box-sizing: border-box;
     }
 
     .main-right-bottom-down {
-        width: 99%;
-        height: 500px;
+        padding-left: 3.5%;
+        width: 96.5%;
+        height: 450px;
+    }
 
-        padding-left: 1%;
+    .main-right-bottom-top {
+        padding-left: 3.5%;
+        width: 96.5%;
     }
 
     .table {
-        padding-left: 1%;
-        width: 99%;
+        padding-left: 3.5%;
+        width: 96.5%;
         border-collapse: collapse;
         text-align: center;
-        padding-left: 1%;
     }
 
 
-    .table-header th {
-        display: flex;
+
+    .main-right-bottom-two {
+        width: 99%;
+        height: 550px;
+        padding-left: 1%;
+        display: none;
         align-items: center;
         justify-content: center;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
 }
