--- a/public/css/Component/Collector/Collector_assistants-main.css
+++ b/public/css/Component/Collector/Collector_assistants-main.css
@@ -12,17 +12,11 @@
         display: grid;
         width: 100%;
         height: 100%;
-        grid-template-rows: 23% 79%;
+        grid-template-rows: 23% 77%;
+        background-color: var(--background-color-right);
+
     }
 
-    .main-right-top-one {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-        align-items: center;
-        height: 65px;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    }
 
     .main-right-top {
         display: flex;
@@ -191,6 +185,7 @@
     .main-right-top-two h1 {
         font-size: 19px;
         margin-left: 1%;
+        letter-spacing: 0.03rem;
         margin-top: 1%;
     }
 
